[gd_scene load_steps=3 format=3 uid="uid://bka2ha4sm0s0a"]

[ext_resource type="Script" uid="uid://ptf4jwipsol" path="res://prefabs/coldsteel.gd" id="1_1vhji"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_kqxyw"]
radius = 2.0

[node name="coldsteel" type="Node3D"]
script = ExtResource("1_1vhji")

[node name="area3d_near_enemy" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 64
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="area3d_near_enemy"]
shape = SubResource("CylinderShape3D_kqxyw")

[node name="timer_find_enemy_in_area" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]

[connection signal="timeout" from="timer_find_enemy_in_area" to="." method="_on_timer_find_enemy_in_area_timeout"]
